option('python', type: 'boolean', value: false)
option('testing', type: 'feature', value: 'auto')
option('unit_testing', type: 'feature', value: 'auto')
option('docs', type: 'boolean', value: false)
option('kissat', type: 'boolean', value: false)
option('cryptominisat', type: 'boolean', value: false)
option('fpexp', type: 'boolean', value: false)
option('gmp_inc_path', type: 'string')
option('gmp_lib_path', type: 'string')